--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Fikri Muzadi</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Web Developer</span> from Indonesia</h2>
+      <h2>I'm a passionate <span>Fullstack Web Developer</span> from Indonesia</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -85,7 +85,7 @@
           <img src="assets/img/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Web Developer</h3>
+          <h3>Full Stack Web Developer</h3>
           <p class="fst-italic">
             Hey, people say if you don't know then you don't love, so this is my short bio
           </p>
@@ -115,8 +115,8 @@
 
     </div><!-- End About Me -->
 
-<!-- 
-     ======= Counts ======= 
+
+     <!-- ======= Counts ======= 
     <div class="counts container">
 
       <div class="row">
@@ -152,11 +152,9 @@
             <p>Awards</p>
           </div>
         </div>
-
       </div>
+    </div>  End Counts  -->
 
-    </div>  End Counts 
--->
 
 <!--  
     ======= Skills  =======
@@ -447,8 +445,7 @@
   </section><!-- End About Section -->
 
 
-  <!--  -->
-  ======= Resume Section =======
+  <!-- ======= Resume Section =======  -->
   <section id="resume" class="resume">
     <div class="container">
 
@@ -462,14 +459,31 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Fikri Muzadi</h4>
-              <p><em>Innovative and deadline-oriented web developer with more than 1 year of experience designing and developing always updated with the latest technology as a full stack developer from the initial concept to the perfect final result.</em></p>
+              <p><em>Challenges are an interesting thing in life and I love it, with effective problem solving skills I can solve many challenges
+                these challenges. Currently I am working as a full stack web developer after learning several skills such as Android
+                developer, data science, machine learning. Continuously learning and developing is part of my life
+                
+                Innovative and deadline-oriented web developer with more than 1 year of experience designing and developing always updated with the latest technology as a full stack developer from the initial concept to the perfect final result.</em></p>
             <p>
             <ul>
-              <li>Semarang, Indonesia</li>
-              <li>+62 821 3803 1803</li>
-              <li>fikrimuzadi@gmail.com</li>
+              <li>Address : Semarang, Central Java, Indonesia</li>
+              <li>Phone : 0821-3803-1803</li>
+              <li>Email : fikrimuzadi@gmail.com</li>
+              <li>Website : fikrimuza.github.io</li>
+              <li>LinkedIn : linkedin.com/in/fikri-muzadi</li>
             </ul>
             </p>
+          </div>
+
+          <h3 class="resume-title">Work Experience</h3>
+          <div class="resume-item">
+            <h4>Full Stack Web Developer</h4>
+            <h5>2022 - Present</h5>
+            <p><em>Remote Worker Indonesia, Indonesia </em></p>
+            <ul>
+              <li>Full stack web developer with Django framework (Python)</li>
+              <li> Full stack web developer with MEVN (MongoDB, Express.js, Vue.js, Node.JS) framework</li>
+            </ul>
           </div>
 
           <h3 class="resume-title">Education</h3>
@@ -484,14 +498,13 @@
             <h5>2016 - 2020</h5>
             <p><em>Surakarta University, Surakarta</em></p>
             <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
-          </div>
-          <h3 class="resume-title">Professional Experience</h3>
-          <div class="resume-item">
-            <h4>Full Stack Web Developer</h4>
-            <h5>2022 - Present</h5>
-            <p><em>Semarang, Indonesia </em></p>
+            <ul>
+              <li>Safe door security tool with double keys system based Arduino</li>
+              <li>Color sorter with Arduino</li>
+            </ul>
           </div>
         </div>
+
         <!-- <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
@@ -523,6 +536,9 @@
         </div> -->
       </div>
 
+      <a href="/assets/img/portfolio/cv programmer.pdf" download>
+        <button type="button" class="btn btn-success">Download Portfolio</button>
+      </a>
     </div>
   </section><!-- End Resume Section -->
 
@@ -549,7 +565,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-            <img style="width: 150px;" src="/assets/img/django.png" alt="">
+            <img style="width: 150px;" src="/assets/img/dj.png" alt="">
             <h4><a href="">Django Developer</a></h4>
             <p>Full Stack developer with Framework from Python</p>
           </div>
@@ -558,7 +574,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
-            <img style="width: 150px;" src="/assets/img/scraping.png" alt="">
+            <img style="width: 150px;" src="/assets/img/scrap.png" alt="">
             <h4><a href="">Data Scrapping</a></h4>
             <p>Excelent choice if you need dataset</p>
           </div>
