--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
-            <img style="width: 150px;" src="/assets/img/mevn.png" alt="">
+            <box-icon type='logo' name='nodejs'></box-icon>
             <h4><a href="">MEVN Developer</a></h4>
             <p>Full Stack with Framework in JavaScript</p>
           </div>
@@ -565,7 +565,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-            <img style="width: 150px;" src="/assets/img/dj.png" alt="">
+            <box-icon type='logo' name='django'></box-icon>
             <h4><a href="">Django Developer</a></h4>
             <p>Full Stack developer with Framework from Python</p>
           </div>
@@ -574,7 +574,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
-            <img style="width: 150px;" src="/assets/img/scrap.png" alt="">
+            <box-icon type='solid' name='data'></box-icon>
             <h4><a href="">Data Scrapping</a></h4>
             <p>Excelent choice if you need dataset</p>
           </div>
@@ -582,17 +582,17 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <box-icon type='logo' name='php'></box-icon>
+            <h4><a href="">Laravel Developer</a></h4>
+            <p>Full Stack developer with Framework from php</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <box-icon type='logo' name='wordpress'></box-icon>
+            <h4><a href="">Wordpress</a></h4>
+            <p>Build Web with Content Management System based on php</p>
           </div>
         </div>
 
