--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <img src="assets/img/me.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Full Stack Web Developer</h3>
+          <h3>Fullstack Web Developer</h3>
           <p class="fst-italic">
             Hey, people say if you don't know then you don't love, so this is my short bio
           </p>
@@ -477,12 +477,13 @@
 
           <h3 class="resume-title">Work Experience</h3>
           <div class="resume-item">
-            <h4>Full Stack Web Developer</h4>
+            <h4>Fullstack Web Developer</h4>
             <h5>2022 - Present</h5>
             <p><em>Remote Worker Indonesia, Indonesia </em></p>
             <ul>
-              <li>Full stack web developer with Django framework (Python)</li>
-              <li> Full stack web developer with MEVN (MongoDB, Express.js, Vue.js, Node.JS) framework</li>
+              <li>Fullstack web developer with Django framework (Python)</li>
+              <li>Fullstack web developer with MEVN (MongoDB, Express.js, Vue.js, Node.JS) framework</li>
+              <li>Fullstack web developer with laravel framework (PHP)</li>
             </ul>
           </div>
 
@@ -553,36 +554,36 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
-            <box-icon type='logo' name='nodejs'></box-icon>
+            <div class="icon"><i class='bx bxl-nodejs' ></i></div>
             <h4><a href="">MEVN Developer</a></h4>
-            <p>Full Stack with Framework in JavaScript</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-            <box-icon type='logo' name='django'></box-icon>
-            <h4><a href="">Django Developer</a></h4>
-            <p>Full Stack developer with Framework from Python</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
-            <box-icon type='solid' name='data'></box-icon>
-            <h4><a href="">Data Scrapping</a></h4>
-            <p>Excelent choice if you need dataset</p>
+            <p>Full Stack with Framework NodeJS from JavaScript</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <box-icon type='logo' name='php'></box-icon>
+            <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+            <div class="icon"><i class='bx bxl-django' ></i></div>
+            <h4><a href="">Django Developer</a></h4>
+            <p>Full Stack developer with Framework from Python</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
+            <div class="icon"><i class='bx bxs-data' ></i></div>
+            <h4><a href="">Data Scrapping</a></h4>
+            <p>Excelent for data collection from python tools</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class='bx bxl-php' ></i></div>
             <h4><a href="">Laravel Developer</a></h4>
             <p>Full Stack developer with Framework from php</p>
           </div>
@@ -590,7 +591,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <box-icon type='logo' name='wordpress'></box-icon>
+            <div class="icon"><i class='bx bxl-wordpress'></i></div>
             <h4><a href="">Wordpress</a></h4>
             <p>Build Web with Content Management System based on php</p>
           </div>
